Agregando info para pagina web

--- a/investigación02.html
+++ b/investigación02.html
@@ -7,6 +7,87 @@
     <link rel="stylesheet" href="css/investigación02.css">
 </head>
 <body>
+    <main>
+        <header>
+            <div id="">
+                <img id="img_logo" src="img/logo.png" alt="logo">
+            </div>
+            <div id="barra_menu">
+                <ul id="menu">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">Conctact</a></li>
+                </ul>
+            </div>
+        </header>
+
+        <section id="contenido">
+            <img src="img/imgfondo.jpg" alt="Center for Nonprofit Management">
+            
+            <article class="mision">
+                <h3>Mission Statement</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus adipisci non consequuntur dolorum quos, rerum ad quisquam eos perferendis quaerat, vel porro nobis, sapiente cumque optio commodi molestias aliquam quam.</p>
+                <div class="mas">
+                    <a href="#">Read More ▶</a>
+                </div>
+            </article>
+
+            <article class="historia">
+                <h3>History</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus adipisci non consequuntur dolorum quos, rerum ad quisquam eos perferendis quaerat, vel porro nobis, sapiente cumque optio commodi molestias aliquam quam.</p>
+                <div class="mas">
+                    <a href="#">Read More ▶</a>
+                </div>
+            </article>
+
+            <article class="directores">
+                <h3>Board of Directors</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus adipisci non consequuntur dolorum quos, rerum ad quisquam eos perferendis quaerat, vel porro nobis, sapiente cumque optio commodi molestias aliquam quam.</p>
+                <div class="mas">
+                    <a href="#">Read More ▶</a>
+                </div>
+            </article>
+
+            <article id="content">
+                <br>
+                <h3>Latest News</h3>
+                <img src="img/news.jpg" alt="Latest News">
+                <h3>Lorem Ipsum</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt earum tempore explicabo illum laborum et ipsam molestiae vero ipsa eligendi beatae quod non magnam id, nostrum recusandae aliquid doloremque placeat?</p>
+                <div class="mas"></div>
+                    <a href="#">Read More ▶</a>
+                </div>
+            </article>
+        </section>
+
+        <section id="contenido_abajo">
+            <div class="caja">
+                <h3>Calendars & Events</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos architecto qui, reprehenderit necessitatibus, accusantium iste repellat, facilis eos mollitia eaque laborum quod sequi! Laborum, cumque omnis voluptas tempore nemo modi?</p>
+            </div>
+
+            <div class="caja">
+                <h3>Consulting</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos architecto qui, reprehenderit necessitatibus, accusantium iste repellat, facilis eos mollitia eaque laborum quod sequi! Laborum, cumque omnis voluptas tempore nemo modi?</p>
+            </div>
+
+            <div class="caja">
+                <h3>Nonprofit & Careers</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos architecto qui, reprehenderit necessitatibus, accusantium iste repellat, facilis eos mollitia eaque laborum quod sequi! Laborum, cumque omnis voluptas tempore nemo modi?</p>
+            </div>
+
+            <div class="caja">
+                <h3>Resources & Tools</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos architecto qui, reprehenderit necessitatibus, accusantium iste repellat, facilis eos mollitia eaque laborum quod sequi! Laborum, cumque omnis voluptas tempore nemo modi?</p>
+            </div>
+        </section>
+    </main>
     
+    <footer>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur maiores iure maxime magni reiciendis explicabo alias amet, ullam blanditiis. Ab error deserunt fugiat voluptatem at porro officia, aliquam tempora laudantium.</p>
+        </div>
+    </footer>
 </body>
 </html>
