--- a/investigación02.html
+++ b/investigación02.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Investigación02</title>
     <link rel="stylesheet" href="css/investigación02.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <main>
@@ -89,5 +90,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur maiores iure maxime magni reiciendis explicabo alias amet, ullam blanditiis. Ab error deserunt fugiat voluptatem at porro officia, aliquam tempora laudantium.</p>
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
