--- a/investigación02.html
+++ b/investigación02.html
@@ -9,8 +9,8 @@
 <body>
     <main>
         <header>
-            <div id="">
-                <img id="img_logo" src="img/logo.png" alt="logo">
+            <div id="imglogo" >
+                <img src="img/logo.png" alt="logo">
             </div>
             <div id="barra_menu">
                 <ul id="menu">
