--- a/investigación02.html
+++ b/investigación02.html
@@ -24,7 +24,7 @@
         </header>
 
         <section id="contenido">
-            <img src="img/imgfondo.jpg" alt="Center for Nonprofit Management">
+            <img class="cenLogo" src="img/imgfondo.jpg" alt="Center for Nonprofit Management">
             
             <article class="mision">
                 <h3>Mission Statement</h3>
