--- a/investigación02.html
+++ b/investigación02.html
@@ -11,7 +11,7 @@
     <main>
         <header>
             <div id="imglogo" >
-                <img src="img/logo.png" alt="logo">
+                <img class="logo" src="img/logo.png" alt="logo">
             </div>
             <div id="barra_menu">
                 <ul id="menu">
