--- a/investigación02.html
+++ b/investigación02.html
@@ -26,29 +26,33 @@
         <section id="contenido">
             <img class="cenLogo" src="img/imgfondo.jpg" alt="Center for Nonprofit Management">
             
-            <article class="mision">
+            <div class="container">
+                <div class="row">
+            <div class="col-md-4">
                 <h3>Mission Statement</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus adipisci non consequuntur dolorum quos, rerum ad quisquam eos perferendis quaerat, vel porro nobis, sapiente cumque optio commodi molestias aliquam quam.</p>
                 <div class="mas">
                     <a href="#">Read More ▶</a>
                 </div>
-            </article>
+            </div>
 
-            <article class="historia">
+            <div class="col-md-4">
                 <h3>History</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus adipisci non consequuntur dolorum quos, rerum ad quisquam eos perferendis quaerat, vel porro nobis, sapiente cumque optio commodi molestias aliquam quam.</p>
                 <div class="mas">
                     <a href="#">Read More ▶</a>
                 </div>
-            </article>
+            </div>
 
-            <article class="directores">
+            <div class="col-md-4">
                 <h3>Board of Directors</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus adipisci non consequuntur dolorum quos, rerum ad quisquam eos perferendis quaerat, vel porro nobis, sapiente cumque optio commodi molestias aliquam quam.</p>
                 <div class="mas">
                     <a href="#">Read More ▶</a>
                 </div>
-            </article>
+            </div>
+                </div>
+            </div>
 
             <article id="content">
                 <br>
