--- a/investigación02.html
+++ b/investigación02.html
@@ -39,7 +39,7 @@
             <div class="col-md-4" style="background-color: #2bb3d9;">
                 <h3>History</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus adipisci non consequuntur dolorum quos, rerum ad quisquam eos perferendis quaerat, vel porro nobis, sapiente cumque optio commodi molestias aliquam quam.</p>
-                <div class="mas">
+                <div class="Mas">
                     <a href="#">Read More ▶</a>
                 </div>
             </div>
@@ -47,7 +47,7 @@
             <div class="col-md-4" style="background-color: #079acc;">
                 <h3>Board of Directors</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus adipisci non consequuntur dolorum quos, rerum ad quisquam eos perferendis quaerat, vel porro nobis, sapiente cumque optio commodi molestias aliquam quam.</p>
-                <div class="mas">
+                <div class="MAS">
                     <a href="#">Read More ▶</a>
                 </div>
             </div>
