--- a/investigación02.html
+++ b/investigación02.html
@@ -61,7 +61,7 @@
                 <h3>Lorem Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt earum tempore explicabo illum laborum et ipsam molestiae vero ipsa eligendi beatae quod non magnam id, nostrum recusandae aliquid doloremque placeat?</p>
                 <div class="mas"></div>
-                    <a href="#">Read More ▶</a>
+                    <a>Read More ▶</a>
                 </div>
             </article>
         </section>
