--- a/investigación02.html
+++ b/investigación02.html
@@ -31,24 +31,24 @@
             <div class="col-md-4" style="background-color: #50cce6;">
                 <h3>Mission Statement</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus adipisci non consequuntur dolorum quos, rerum ad quisquam eos perferendis quaerat, vel porro nobis, sapiente cumque optio commodi molestias aliquam quam.</p>
-                <div class="mas">
-                    <a href="#">Read More ▶</a>
+                <div>
+                    <a class="s" href="#">Read More ▶</a>
                 </div>
             </div>
 
             <div class="col-md-4" style="background-color: #2bb3d9;">
                 <h3>History</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus adipisci non consequuntur dolorum quos, rerum ad quisquam eos perferendis quaerat, vel porro nobis, sapiente cumque optio commodi molestias aliquam quam.</p>
-                <div class="Mas">
-                    <a href="#">Read More ▶</a>
+                <div>
+                    <a class="ss" href="#">Read More ▶</a>
                 </div>
             </div>
 
             <div class="col-md-4" style="background-color: #079acc;">
                 <h3>Board of Directors</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus adipisci non consequuntur dolorum quos, rerum ad quisquam eos perferendis quaerat, vel porro nobis, sapiente cumque optio commodi molestias aliquam quam.</p>
-                <div class="MAS">
-                    <a href="#">Read More ▶</a>
+                <div>
+                    <a class="sss" href="#">Read More ▶</a>
                 </div>
             </div>
                 </div>
