--- a/investigación02.html
+++ b/investigación02.html
@@ -15,10 +15,10 @@
             </div>
             <div id="barra_menu">
                 <ul id="menu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Support</a></li>
-                    <li><a href="#">Conctact</a></li>
+                    <li><a class="z" href="#">Home</a></li>
+                    <li><a class="zz" href="#">About</a></li>
+                    <li><a class="zzz" href="#">Support</a></li>
+                    <li><a class="zzzz" href="#">Conctact</a></li>
                 </ul>
             </div>
         </header>
