--- a/investigación02.html
+++ b/investigación02.html
@@ -56,7 +56,7 @@
 
             <article id="content">
                 <br>
-                <h3>Latest News</h3>
+                <h3 class="xd">Latest News</h3>
                 <img src="img/news.jpg" alt="Latest News">
                 <h3>Lorem Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt earum tempore explicabo illum laborum et ipsam molestiae vero ipsa eligendi beatae quod non magnam id, nostrum recusandae aliquid doloremque placeat?</p>
