--- a/investigación02.html
+++ b/investigación02.html
@@ -54,7 +54,8 @@
                 </div>
             </div>
 
-            <article id="content">
+            <div class="container">
+                <div class="row">
                 <br>
                 <h3 class="xd">Latest News</h3>
                 <img src="img/news.jpg" alt="Latest News">
@@ -63,7 +64,8 @@
                 <div class="mas"></div>
                     <a href="#">Read More ▶</a>
                 </div>
-            </article>
+                </div>
+            </div>
         </section>
 
         <section id="contenido_abajo">
