--- a/investigación02.html
+++ b/investigación02.html
@@ -56,11 +56,13 @@
 
             <div class="container">
                 <div class="row">
-                <br>
+                <br class="xyz">
                 <h3 class="xd">Latest News</h3>
                 <img src="img/news.jpg" alt="Latest News">
+                <div class="sx">
                 <h3>Lorem Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt earum tempore explicabo illum laborum et ipsam molestiae vero ipsa eligendi beatae quod non magnam id, nostrum recusandae aliquid doloremque placeat?</p>
+                </div>
                 <div class="mas"></div>
                     <a href="#">Read More ▶</a>
                 </div>
