--- a/investigación02.html
+++ b/investigación02.html
@@ -56,8 +56,9 @@
 
             <div class="container">
                 <div class="row">
-                <br class="xyz">
+                    <div class="xyz">
                 <h3 class="xd">Latest News</h3>
+                    </div>
                 <img src="img/news.jpg" alt="Latest News">
                 <div class="sx">
                 <h3>Lorem Ipsum</h3>
