add modification img

--- a/investigación02.html
+++ b/investigación02.html
@@ -59,7 +59,7 @@
                     <div class="xyz">
                 <h3 class="xd">Latest News</h3>
                     </div>
-                <img src="img/news.jpg" alt="Latest News">
+                <img class="gg" src="img/news.jpg" alt="Latest News">
                 <div class="sx">
                 <h3>Lorem Ipsum</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt earum tempore explicabo illum laborum et ipsam molestiae vero ipsa eligendi beatae quod non magnam id, nostrum recusandae aliquid doloremque placeat?</p>
