--- a/investigación02.html
+++ b/investigación02.html
@@ -65,6 +65,18 @@
                     <a href="#">Read More ▶</a>
                 </div>
                 </div>
+
+                <div class="container">
+                    <div class="row">
+                        <br>
+                        <h3 class="featured">featured</h3>
+                        <img src="img/Featured.jpg" alt="Feautured">
+                        <h3>Lorem Ipsum</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, delectus dolor? Repudiandae neque fugit deleniti accusamus ipsa officia magni. Similique dolore molestias esse consequatur ducimus nulla, dicta aut expedita debitis?</p>
+                        <div class="mas"></div>
+                         <a href="#">Read More ▶</a>
+                    </div>
+                </div>
             </div>
         </section>
 
