--- a/investigación02.html
+++ b/investigación02.html
@@ -72,7 +72,8 @@
         </section>
 
         <section id="contenido_abajo">
-            <div class="caja">
+            <div class="container">
+                <div class="row">
                 <h3>Calendars & Events</h3>
                 <img src="img/Calendars & Events.png" alt="Calendars">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos architecto qui, reprehenderit necessitatibus, accusantium iste repellat, facilis eos mollitia eaque laborum quod sequi! Laborum, cumque omnis voluptas tempore nemo modi?</p>
@@ -95,6 +96,8 @@
                 <img src="img/Resources.jpn.png" alt="Resources">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos architecto qui, reprehenderit necessitatibus, accusantium iste repellat, facilis eos mollitia eaque laborum quod sequi! Laborum, cumque omnis voluptas tempore nemo modi?</p>
             </div>
+            </div>
+        </div>
         </section>
     </main>
     
