--- a/investigación02.html
+++ b/investigación02.html
@@ -72,8 +72,7 @@
         </section>
 
         <section id="contenido_abajo">
-            <div class="container">
-                <div class="row">
+            <div class="caja">
                 <h3>Calendars & Events</h3>
                 <img src="img/Calendars & Events.png" alt="Calendars">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos architecto qui, reprehenderit necessitatibus, accusantium iste repellat, facilis eos mollitia eaque laborum quod sequi! Laborum, cumque omnis voluptas tempore nemo modi?</p>
@@ -96,8 +95,6 @@
                 <img src="img/Resources.jpn.png" alt="Resources">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos architecto qui, reprehenderit necessitatibus, accusantium iste repellat, facilis eos mollitia eaque laborum quod sequi! Laborum, cumque omnis voluptas tempore nemo modi?</p>
             </div>
-            </div>
-        </div>
         </section>
     </main>
     
