--- a/investigación02.html
+++ b/investigación02.html
@@ -71,7 +71,7 @@
             </div>
         </section>
 
-        <section id="contenido_abajo">
+        <section class="carga">
             <div class="caja">
                 <h3>Calendars & Events</h3>
                 <img src="img/Calendars & Events.png" alt="Calendars">
@@ -84,13 +84,13 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos architecto qui, reprehenderit necessitatibus, accusantium iste repellat, facilis eos mollitia eaque laborum quod sequi! Laborum, cumque omnis voluptas tempore nemo modi?</p>
             </div>
 
-            <div class="caja">
+            <div class="casa">
                 <h3>Nonprofit & Careers</h3>
                 <img src="img/Nonprofit.jpg" alt="Nonprofit">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos architecto qui, reprehenderit necessitatibus, accusantium iste repellat, facilis eos mollitia eaque laborum quod sequi! Laborum, cumque omnis voluptas tempore nemo modi?</p>
             </div>
 
-            <div class="caja">
+            <div class="casa">
                 <h3>Resources & Tools</h3>
                 <img src="img/Resources.jpn.png" alt="Resources">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos architecto qui, reprehenderit necessitatibus, accusantium iste repellat, facilis eos mollitia eaque laborum quod sequi! Laborum, cumque omnis voluptas tempore nemo modi?</p>
