--- a/investigación02.html
+++ b/investigación02.html
@@ -73,26 +73,26 @@
 
         <section class="carga">
             <div class="caja">
-                <h3>Calendars & Events</h3>
-                <img src="img/Calendars & Events.png" alt="Calendars">
+                <h3 class="dkl">Calendars & Events</h3>
+                <img class="cortar" src="img/Calendars & Events.png" alt="Calendars">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos architecto qui, reprehenderit necessitatibus, accusantium iste repellat, facilis eos mollitia eaque laborum quod sequi! Laborum, cumque omnis voluptas tempore nemo modi?</p>
             </div>
 
             <div class="caja">
-                <h3>Consulting</h3>
-                <img src="img/Consulting.jpg" alt="Consulting">
+                <h3 class="dkl">Consulting</h3>
+                <img class="cortar" src="img/Consulting.jpg" alt="Consulting">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos architecto qui, reprehenderit necessitatibus, accusantium iste repellat, facilis eos mollitia eaque laborum quod sequi! Laborum, cumque omnis voluptas tempore nemo modi?</p>
             </div>
 
             <div class="casa">
-                <h3>Nonprofit & Careers</h3>
-                <img src="img/Nonprofit.jpg" alt="Nonprofit">
+                <h3 class="dkl">Nonprofit & Careers</h3>
+                <img class="cortar" src="img/Nonprofit.jpg" alt="Nonprofit">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos architecto qui, reprehenderit necessitatibus, accusantium iste repellat, facilis eos mollitia eaque laborum quod sequi! Laborum, cumque omnis voluptas tempore nemo modi?</p>
             </div>
 
             <div class="casa">
-                <h3>Resources & Tools</h3>
-                <img src="img/Resources.jpn.png" alt="Resources">
+                <h3 class="dkl">Resources & Tools</h3>
+                <img class="cortar" src="img/Resources.jpn.png" alt="Resources">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos architecto qui, reprehenderit necessitatibus, accusantium iste repellat, facilis eos mollitia eaque laborum quod sequi! Laborum, cumque omnis voluptas tempore nemo modi?</p>
             </div>
         </section>
