--- a/investigación02.html
+++ b/investigación02.html
@@ -89,10 +89,45 @@
         </section>
     </main>
     
-    <footer>
-        <div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur maiores iure maxime magni reiciendis explicabo alias amet, ullam blanditiis. Ab error deserunt fugiat voluptatem at porro officia, aliquam tempora laudantium.</p>
-        </div>
+    <footer class="footer">
+       <section class="footer__sections">
+            <div class="footer__sections-container container">
+                <article class="footer__section">
+                    <h3 class="footer__section-title">Home</h3>
+                    <ul class="footer__section-table">
+                        <li class="footer__section-links"><a href="#" class="footer__section-link">Seminers</a></li>
+                        <li class="footer__section-links"><a href="#" class="footer__section-link">Who we are</a></li>
+                        <li class="footer__section-links"><a href="#" class="footer__section-link">About us</a></li>
+                        <li class="footer__section-links"><a href="#" class="footer__section-link">Contact us</a></li>
+                        <li class="footer__section-links"><a href="#" class="footer__section-link">Join</a></li>
+                        <li class="footer__section-links"><a href="#" class="footer__section-link">Content</a></li>
+                    </ul>
+                </article>
+
+                <article class="footer__section">
+                    <h3 class="footer__section-title">Home</h3>
+                    <ul class="footer__section-table">
+                        <li class="footer__section-links"><a href="#" class="footer__section-link">Seminers</a></li>
+                        <li class="footer__section-links"><a href="#" class="footer__section-link">Who we are</a></li>
+                        <li class="footer__section-links"><a href="#" class="footer__section-link">About us</a></li>
+                        <li class="footer__section-links"><a href="#" class="footer__section-link">Contact us</a></li>
+                        <li class="footer__section-links"><a href="#" class="footer__section-link">Join</a></li>
+                        <li class="footer__section-links"><a href="#" class="footer__section-link">Content</a></li>
+                    </ul>
+                </article>
+
+                <article class="footer__section"></article>
+                    <h3 class="footer__section-title">About Us</h3>
+                    <ul class="footer__section-table">
+                        <li class="footer__section-links"><a href="#" class="footer__section-link">Supporters</a></li>
+                        <li class="footer__section-links"><a href="#" class="footer__section-link">Our Team</a></li>
+                        <li class="footer__section-links"><a href="#" class="footer__section-link">Blog</a></li>
+                        <li class="footer__section-links"><a href="#" class="footer__section-link">PGS</a></li>
+                        <li class="footer__section-links"><a href="#" class="footer__section-link">Twitter</a></li>
+                    </ul>
+                </article>
+            </div>
+       </section>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
